--- a/testing.html
+++ b/testing.html
@@ -924,15 +924,22 @@
 <!-- Container for second social content areas -->
   <div id="discussion-panel">
     <div id="discussion-Home" class="content-section" style="display: none;"></div>
-    <div id="discussion-NFL" class="content-section" style="display: none;"></div>
+    <div id="discussion-NFL" class="content-section" style="display: none;">
+      <rssapp-feed id="Ad2sypO2W5TebTah"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-NBA" class="content-section" style="display: none;">
       <rssapp-feed id="X8zCF7HteOBdTUyk"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="discussion-MLB" class="content-section" style="display: none;"></div>
-    <div id="discussion-NHL" class="content-section" style="display: none;"></div>
+    <div id="discussion-MLB" class="content-section" style="display: none;">
+      <rssapp-feed id="5BZVMJXLmnRlh1J3"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-NHL" class="content-section" style="display: none;">
+      <rssapp-feed id="LlaGrdoWldt4gFyg"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-Soccer" class="content-section" style="display: none;"></div>
- <div id="discussion-Soccer" class="content-section" style="display: none;"></div>
-     <div id="discussion-UEFAChampionsLeague" class="content-section" style="display: none;"></div>
+     <div id="discussion-UEFAChampionsLeague" class="content-section" style="display: none;">
+       <rssapp-feed id="cJ9fge5WHLX256Dp"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
      <div id="discussion-PremierLeague" class="content-section" style="display: none;">
        <rssapp-feed id="oCaWMBYI3Vs3Kywq"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
      </div>
