--- a/testing.html
+++ b/testing.html
@@ -33,7 +33,7 @@
       #topBar {
         width: 100%;
         height: 18px;
-        background-color: #151515;
+        background-color: #3c3c3c;
       }
       /* Divider below top bar */
       #topDivider {
