--- a/testing.html
+++ b/testing.html
@@ -41,6 +41,13 @@
         height: 2px;
         background-color: #151515;
       }
+      #topBar,
+#topDivider {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
       /* Container for columns */
       .container {
         display: flex;
