--- a/testing.html
+++ b/testing.html
@@ -82,7 +82,7 @@
       #menuTopBox {
         width: 165px;
         height: 18px;
-        background-color: #c4c4c4;
+        background-color: #3c3c3c;
         padding-left: 2px;
         display: flex;
         align-items: center;
