--- a/testing.html
+++ b/testing.html
@@ -18,7 +18,7 @@
         height: 100%;
         font-family: Arial, sans-serif;
         background-color: #151515;
-        color: #000;
+        color: white;
       }
       ul,
       li {
