--- a/testing.html
+++ b/testing.html
@@ -61,7 +61,7 @@
       }
       .main-menu {
         background-color: #151515;
-        color: #91b3a2;
+        color: white;
         flex: 0 0 165px;
         font-size: 11px;
         padding: 0;
