--- a/testing.html
+++ b/testing.html
@@ -877,7 +877,7 @@
       <rssapp-feed id="kn6jmA3jysBosngx"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
     <div id="social2-UFC" class="content-section" style="display: none;">
-      <rssapp-feed id="P6jq1TZvc8EtrVy6"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+      <rssapp-feed id="uvXUb7PWcb7AyAuS"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
     <div id="social2-Boxing" class="content-section" style="display: none;">
       <rssapp-feed id="_5YtqXnChDUFwAfTB"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
