--- a/testing.html
+++ b/testing.html
@@ -254,7 +254,7 @@
             <li data-section="IndyCar">IndyCar</li>
             <li data-section="NCAAM">NCAAM</li>
             <li data-section="NCAAW">NCAAW</li>
-            <li data-section="UFL">UFL</li>
+           <!-- <li data-section="UFL">UFL</li> -->
             <li data-section="NCAABaseball">NCAA Baseball</li>
             <li data-section="NCAASoftball">NCAA Softball</li>
             <li data-section="MotoGP">MotoGP</li>
@@ -339,7 +339,7 @@
             <li data-section="TrackAndField">Track &amp; Field</li>
             <li data-section="USOpenCup">U.S. Open Cup</li>
             <li data-section="UFC">UFC</li>
-            <li data-section="UFL">UFL</li>
+            <!--<li data-section="UFL">UFL</li>-->
             <li data-section="UEFAChampionsLeague">UEFA Champions League</li>
             <li data-section="UEFAConferenceLeague">UEFA Conference League</li>
             <li data-section="UEFAEuropaLeague">UEFA Europa League</li>
@@ -361,7 +361,7 @@
             <ul style="padding-left: 10px;">
               <li data-section="NFL">NFL</li>
               <li data-section="NCAAF">NCAAF</li>
-              <li data-section="UFL">UFL</li>
+             <!-- <li data-section="UFL">UFL</li>-->
               <li data-section="CFL">CFL</li>
             </ul>
             <li class="spacer-line"></li>
