--- a/testing.html
+++ b/testing.html
@@ -12,7 +12,8 @@
 </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>THPORTH</title>
+    <meta name="description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place.">
+    <title>THPORTH | All the latest sports news</title>
     <link
       rel="icon"
       type="image/png"
