--- a/testing.html
+++ b/testing.html
@@ -19,6 +19,7 @@
       type="image/png"
       href="https://github.com/ajolly2/thporthsite/blob/main/thporth_favicon.png?raw=true"
     />
+    <link rel="canonical" href="https://www.thporth.com/" />
 
     <style>
       html,
