--- a/testing.html
+++ b/testing.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place.">
+    <meta name="robots" content="index, follow" />
     <title>THPORTH | All the latest sports news</title>
     <link
       rel="icon"
@@ -20,7 +21,19 @@
       href="https://github.com/ajolly2/thporthsite/blob/main/thporth_favicon.png?raw=true"
     />
     <link rel="canonical" href="https://www.thporth.com/" />
+    
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.thporth.com/" />
+<meta property="og:title" content="THPORTH | All the latest sports news" />
+<meta property="og:description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place." />
+<meta property="og:image" content="https://yourdomain.com/path-to-preview-image.jpg" />
 
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content="https://www.thporth.com/" />
+<meta name="twitter:title" content="THPORTH | All the latest sports news" />
+<meta name="twitter:description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place." />
+<meta name="twitter:image" content="https://yourdomain.com/path-to-preview-image.jpg" />
     <style>
       html,
       body {
