--- a/testing.html
+++ b/testing.html
@@ -15,25 +15,23 @@
     <meta name="description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place.">
     <meta name="robots" content="index, follow" />
     <title>THPORTH | All the latest sports news</title>
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://github.com/ajolly2/thporthsite/blob/main/thporth_favicon.png?raw=true"
-    />
+   
+<link rel="icon" type="image/png" href="https://www.thporth.com/thporth_AllSportsNews_logo-white.png" />
+  
     <link rel="canonical" href="https://www.thporth.com/" />
     
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.thporth.com/" />
 <meta property="og:title" content="THPORTH | All the latest sports news" />
 <meta property="og:description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place." />
-<meta property="og:image" content="https://yourdomain.com/path-to-preview-image.jpg" />
+<meta property="og:image" content="https://github.com/ajolly2/ajolly2.github.io/blob/master/thporth_AllSportsNews_logo-red.png?raw=true" />
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:url" content="https://www.thporth.com/" />
 <meta name="twitter:title" content="THPORTH | All the latest sports news" />
 <meta name="twitter:description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place." />
-<meta name="twitter:image" content="https://yourdomain.com/path-to-preview-image.jpg" />
+<meta name="twitter:image" content="https://github.com/ajolly2/ajolly2.github.io/blob/master/thporth_AllSportsNews_logo-red.png?raw=true" />
     <style>
       html,
       body {
