--- a/testing.html
+++ b/testing.html
@@ -16,7 +16,7 @@
     <meta name="robots" content="index, follow" />
     <title>THPORTH | All the latest sports news</title>
    
-<link rel="icon" type="image/png" href="https://www.thporth.com/thporth_AllSportsNews_logo-white.png" />
+<link rel="icon" type="image/png" href="https://www.thporth.com/thporth_AllSportsNews_logo-black.png" />
   
     <link rel="canonical" href="https://www.thporth.com/" />
     
@@ -229,7 +229,7 @@
       <div class="column main-menu">
         <div id="menuTopBox">
           <img
-            src="https://github.com/ajolly2/ajolly2.github.io/blob/master/Thporth%20Logo%20Black.png?raw=true"
+            src="https://www.thporth.com/thporth_AllSportsNews_logo-black.png"
             alt="Logo"
           />
         </div>
