--- a/testing.html
+++ b/testing.html
@@ -154,7 +154,7 @@
       }
       .selected {
         font-weight: bold;
-        background-color: #91b3a2;
+        background-color: #3c3c3c;
         color: #000;
       }
       #menuList ul {
