--- a/testing.html
+++ b/testing.html
@@ -155,7 +155,7 @@
       .selected {
         font-weight: bold;
         background-color: #3c3c3c;
-        color: #000;
+        color: white;
       }
       #menuList ul {
         padding-left: 0;
