--- a/testing.html
+++ b/testing.html
@@ -148,9 +148,9 @@
         color: #fff;
       }
       .menu-filter.active {
-        background-color: #c7d2c3;
+        background-color: #3c3c3c;
         color: #000;
-        border-color: #c7d2c3;
+        border-color: #3c3c3c;
       }
       .selected {
         font-weight: bold;
