--- a/testing.html
+++ b/testing.html
@@ -141,15 +141,14 @@
         padding: 1px;
         border: 1px solid #444;
         background-color: #222;
-        font-size: 10px;
+        font-size: 9px;
         font-family: Helvetica, Arial, sans-serif;
-        text-transform: uppercase;
         cursor: pointer;
         color: #fff;
       }
       .menu-filter.active {
         background-color: #3c3c3c;
-        color: #000;
+        color: white;
         border-color: #3c3c3c;
       }
       .selected {
