--- a/testing.html
+++ b/testing.html
@@ -112,6 +112,11 @@
         top: 0;
         z-index: 2;
       }
+      #menuList-group li > strong {
+  cursor: default;
+  display: inline-block; /* Makes the cursor effect apply properly */
+  color: #ccc; /* Optional: subtle visual cue it's not active like other items */
+}
       #menuTopBox img {
         height: 18px;
         display: block;
