--- a/testing.html
+++ b/testing.html
@@ -422,7 +422,7 @@
               <li data-section="Ligue1">Ligue 1</li>
               <li data-section="UEFAEuropaLeague">UEFA Europa League</li>
               <li data-section="UEFAConferenceLeague">UEFA Conference League</li>
-              <li class="soccer-more-toggle" style="cursor: pointer; color: #91b3a2;" onclick="toggleSoccerMore()">More…</li>
+              <li class="soccer-more-toggle" style="cursor: pointer; color: #bebebe;" onclick="toggleSoccerMore()">More…</li>
             </ul>
             <div id="soccer-more" style="display: none;">
               <ul style="padding-left: 10px;">
