--- a/testing.html
+++ b/testing.html
@@ -181,7 +181,7 @@
         top: 0;
         width: 100%;
         z-index: 10;
-        background-color: #f2f2f2;
+        background-color: #3f3f3f;
         font-family: Helvetica, Arial, sans-serif;
         font-size: 10px;
         height: 18px;
