--- a/testing.html
+++ b/testing.html
@@ -550,10 +550,7 @@
           News
         </div>
         <!-- News submenu: this submenu appears only on Home -->
-        <div
-          id="newsSubMenu"
-          style="position: sticky; top: 18px; width: 100%; z-index: 10; background-color: #f2f2f2; font-family: Helvetica, Arial, sans-serif; font-size: 10px; height: 18px; display: flex; align-items: center; gap: 10px; padding: 0; margin: 0;"
-        >
+        <div id="newsSubMenu">
           <span class="news-menu-item active" data-feed="ESPN">ESPN</span>
           <span class="news-menu-item" data-feed="CBS">CBS</span>
           <span class="news-menu-item" data-feed="FOX">FOX</span>
