--- a/testing.html
+++ b/testing.html
@@ -198,6 +198,7 @@
       .news-menu-item.active {
         background-color: black;
         color: white;
+        height: 18px;
       }
       .news .rss-feed {
         padding-left: 10px;
@@ -550,7 +551,10 @@
           News
         </div>
         <!-- News submenu: this submenu appears only on Home -->
-        <div id="newsSubMenu">
+        <div
+          id="newsSubMenu"
+          style="position: sticky; top: 18px; width: 100%; z-index: 10; background-color: #545454; font-family: Helvetica, Arial, sans-serif; font-size: 10px; height: 18px; display: flex; align-items: center; gap: 10px; padding: 0; margin: 0;"
+        >
           <span class="news-menu-item active" data-feed="ESPN">ESPN</span>
           <span class="news-menu-item" data-feed="CBS">CBS</span>
           <span class="news-menu-item" data-feed="FOX">FOX</span>
