--- a/testing.html
+++ b/testing.html
@@ -192,13 +192,16 @@
         margin: 0;
       }
       .news-menu-item {
-        cursor: default;
-        padding: 5px 10px;
-      }
+  line-height: 18px;
+  height: 18px;
+  padding: 0 8px; /* Adjust horizontal only */
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
       .news-menu-item.active {
         background-color: black;
         color: white;
-        height: 18px;
       }
       .news .rss-feed {
         padding-left: 10px;
