--- a/testing.html
+++ b/testing.html
@@ -850,7 +850,9 @@
   <!-- Container for second social content areas -->
   <div id="second-social-panel">
     <div id="social2-Home" class="content-section" style="display: none;"></div>
-    <div id="social2-NFL" class="content-section" style="display: none;"></div>
+    <div id="social2-NFL" class="content-section" style="display: none;">
+      <rssapp-feed id="M9oc5a6c5X6mKiaB"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="social2-NBA" class="content-section" style="display: none;">
     <rssapp-feed id="4FRj3PbqYMYOxLiq"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
