--- a/testing.html
+++ b/testing.html
@@ -33,6 +33,71 @@
 <meta name="twitter:description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place." />
 <meta name="twitter:image" content="https://github.com/ajolly2/ajolly2.github.io/blob/master/thporth_AllSportsNews_logo-red.png?raw=true" />
     <style>
+      /* Owners */
+@font-face {
+  font-family: 'Owners';
+  src: url('https://www.thporth.com/fonts/Owners-XLight.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Owners';
+  src: url('https://www.thporth.com/fonts/Owners-medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+/* Owners Wide */
+@font-face {
+  font-family: 'Owners Wide';
+  src: url('https://www.thporth.com/fonts/OwnersWide-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Owners Wide';
+  src: url('https://www.thporth.com/fonts/OwnersWide-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Owners XX Wide */
+@font-face {
+  font-family: 'Owners XX Wide';
+  src: url('https://www.thporth.com/fonts/OwnersXXWide-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Owners XX Wide';
+  src: url('https://www.thporth.com/fonts/OwnersXXWide-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Owners XX Wide';
+  src: url('https://www.thporth.com/fonts/OwnersXXWide-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Owners XX Wide';
+  src: url('https://www.thporth.com/fonts/OwnersXXWide-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Owners XX Wide';
+  src: url('https://www.thporth.com/fonts/OwnersXXWide-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Owners XX Wide';
+  src: url('https://www.thporth.com/fonts/OwnersXXWide-XBlack.woff') format('woff');
+  font-weight: 950;
+  font-style: normal;
+}
       html,
       body {
         margin: 0;
@@ -843,7 +908,7 @@
      <div class="column media-center" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: black">
   <div
     id="socialHeader2"
-    style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
+    style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: 'OwnersXXWideXBlack', sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
   >
     Media Center
   </div>
