--- a/testing.html
+++ b/testing.html
@@ -93,7 +93,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Owners XX Wide';
+  font-family: 'Owners XXWideXBlack';
   src: url('https://www.thporth.com/fonts/OwnersXXWide-XBlack.woff') format('woff');
   font-weight: 950;
   font-style: normal;
