--- a/testing.html
+++ b/testing.html
@@ -616,7 +616,7 @@
           id="newsHeader"
           style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
         >
-          News
+          NEWS
         </div>
         <!-- News submenu: this submenu appears only on Home -->
         <div
@@ -894,7 +894,7 @@
           id="socialHeader"
           style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
         >
-          Social
+          SOCIAL
         </div>
         <!-- Single dynamic container for social feeds -->
         <div id="social-feed-container">
@@ -910,7 +910,7 @@
     id="socialHeader2"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: 'OwnersXXWideXBlack', sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
   >
-    Media Center
+    MEDIA CENTER
   </div>
   <!-- Container for second social content areas -->
   <div id="second-social-panel">
@@ -1024,7 +1024,7 @@
     id="discussionHeader"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
   >
-    Discussion
+    DISCUSSION
   </div>
 <!-- Container for second social content areas -->
   <div id="discussion-panel">
