--- a/testing.html
+++ b/testing.html
@@ -615,8 +615,7 @@
         <div
           id="newsHeader"
           style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
-        >
-          NEWS
+        ><strong>News</strong>
         </div>
         <!-- News submenu: this submenu appears only on Home -->
         <div
@@ -893,8 +892,7 @@
         <div
           id="socialHeader"
           style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
-        >
-          SOCIAL
+        ><strong>Social</strong>
         </div>
         <!-- Single dynamic container for social feeds -->
         <div id="social-feed-container">
@@ -910,7 +908,7 @@
     id="socialHeader2"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: 'OwnersXXWideXBlack', sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
   >
-    MEDIA CENTER
+    <strong>Media Center</strong>
   </div>
   <!-- Container for second social content areas -->
   <div id="second-social-panel">
@@ -1023,8 +1021,8 @@
   <div
     id="discussionHeader"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
-  >
-    DISCUSSION
+  ><strong>Discussion</strong>
+    
   </div>
 <!-- Container for second social content areas -->
   <div id="discussion-panel">
