--- a/testing.html
+++ b/testing.html
@@ -287,6 +287,9 @@
       .rss-feed ul li:last-child {
         border-bottom: none;
       }
+      .rss-feed h4 {
+  color: black;
+}
       .content-section {
         display: none;
         padding: 10px;
