--- a/testing.html
+++ b/testing.html
@@ -290,6 +290,10 @@
       .rss-feed h4 {
   color: black;
 }
+      .rss-feed {
+  background: rgb(70,70,78);
+  background: linear-gradient(90deg, rgba(70,70,78,1) 0%, rgba(0,0,0,1) 100%, rgba(125,125,125,1) 100%);
+}
       .content-section {
         display: none;
         padding: 10px;
