--- a/testing.html
+++ b/testing.html
@@ -154,7 +154,7 @@
         padding: 0;
       }
       .divider {
-        flex: 0 0 2px;
+        flex: 0 0 4px;
         background-color: #151515;
       }
       .news {
@@ -1020,7 +1020,7 @@
       <div class="divider"></div>
 
          <!-- MEDIA CENTER -->
-     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: white">
+     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: black">
   <div
     id="discussionHeader"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
