--- a/testing.html
+++ b/testing.html
@@ -290,6 +290,9 @@
       .rss-feed h4 {
   color: black;
 }
+      .rss-feed {
+        background-color: #fafaf9;
+      }
       .content-section {
         display: none;
         padding: 10px;
