--- a/testing.html
+++ b/testing.html
@@ -159,7 +159,7 @@
       }
       .news {
         flex: 0 0 380px;
-        background-color: #e5e2e1;
+        background-color: #fafaf9;
         padding: 0;
       }
       .social {
