--- a/testing.html
+++ b/testing.html
@@ -1023,7 +1023,7 @@
       <div class="divider"></div>
 
          <!-- MEDIA CENTER -->
-     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: black">
+     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: #1f1f1f">
   <div
     id="discussionHeader"
     style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #3c3c3c; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
