--- a/mobile.html
+++ b/mobile.html
@@ -106,6 +106,7 @@
         font-family: Arial, sans-serif;
         background-color: #151515;
         color: white;
+        overflow: hidden;
       }
       ul,
       li {
