--- a/mobile.html
+++ b/mobile.html
@@ -297,25 +297,35 @@
         display: none;
         padding: 10px;
       }
-      .desktop-content {
+     .desktop-content {
   display: block;
 }
+
 .mobile-message {
   display: none;
 }
 
+/* On mobile (max-width: 500px), hide the desktop content and show a fixed message */
 @media screen and (max-width: 500px) {
   .desktop-content {
     display: none;
   }
   .mobile-message {
-    display: block;
-    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
-    margin-top: 50%;
+    background-color: #151515;
     color: white;
+    z-index: 9999;
   }
 }
+
 
     </style>
   </head>
