--- a/mobile.html
+++ b/mobile.html
@@ -297,7 +297,7 @@
         display: none;
         padding: 10px;
       }
-     .desktop-content {
+    .desktop-content {
   display: block;
 }
 
@@ -305,7 +305,6 @@
   display: none;
 }
 
-/* On mobile (max-width: 500px), hide the desktop content and show a fixed message */
 @media screen and (max-width: 500px) {
   .desktop-content {
     display: none;
@@ -319,12 +318,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
     background-color: #151515;
     color: white;
+    font-size: 20px;
     z-index: 9999;
   }
+  html, body {
+    overflow: hidden;
+    height: 100%;
+  }
 }
+
 
 
     </style>
