--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CBFZXZSG19"></script>
+    <script>
+/* Redirect mobile & small tablets to m.thporth.com */
+(function () {
+  var isSmallScreen = window.innerWidth <= 767;          // width test
+  var isMobileUA = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i
+                   .test(navigator.userAgent);           // user‑agent test
+
+  if ((isSmallScreen || isMobileUA) && 
+      location.hostname === "www.thporth.com" || location.hostname === "thporth.com") {
+    var target = "https://m.thporth.com" + location.pathname + location.search + location.hash;
+    window.location.replace(target);
+  }
+})();
+</script>
+<link rel="alternate" media="only screen and (max-width: 600px)" href="https://m.thporth.com/" />
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -1562,3 +1577,5 @@ document.querySelectorAll("#menuList li[data-section]").forEach(item => {
     </script>
   </body>
 </html> 
+
+
