--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Please visit Thporth.com on desktop
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Centered Div</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .centered-box {
+      padding: 20px;
+      background-color: #eee;
+      border: 1px solid #ccc;
+      font-family: sans-serif;
+    }
+  </style>
+</head>
+<body>
+  <div class="centered-box">
+    THPORTH is better full-size.<br>  
+Please visit thporth.com on desktop.
+  </div>
+</body>
+</html>
