--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
+      background-color: #151515;
     }
 
     body {
@@ -28,8 +29,10 @@
 </head>
 <body>
   <div class="centered-box">
+    <div style="text-align: center;">
     THPORTH is better full-size.<br>  
 Please visit thporth.com on desktop.
+  </div>
   </div>
 </body>
 </html>
