--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     .centered-box {
       padding: 20px;
-      background-color: #eee;
+      background-color: #151515;
       border: 1px solid #ccc;
       font-family: sans-serif;
     }
