--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       padding: 20px;
       background-color: #151515;
       border: 1px solid #ccc;
+      color: white;
       font-family: sans-serif;
     }
   </style>
