--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     .centered-box {
       padding: 20px;
       background-color: #151515;
-      border: 1px solid #ccc;
+      border: 0px solid #151515;
       color: white;
       font-family: sans-serif;
     }
