--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <body>
   <div class="centered-box">
     <div style="text-align: center;">
+      <img src="https://github.com/ajolly2/ajolly2.github.io/blob/master/thporth_AllSportsNews_logo-white.png?raw=true" style="width: 48px; height: 48px;" alt="Logo">
+<br>
     THPORTH is better full-size.<br>  
 Please visit thporth.com on desktop.
   </div>
