--- a/testing.html
+++ b/testing.html
@@ -975,7 +975,7 @@
       <rssapp-feed id="_XvlqCaEHH9Xn9F8D"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
     <div id="social2-PGATour" class="content-section" style="display: none;">
-      <rssapp-feed id="kn6jmA3jysBosngx"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+      <rssapp-feed id="vckzCOWSvP4UKdQH"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
     <div id="social2-UFC" class="content-section" style="display: none;">
       <rssapp-feed id="uvXUb7PWcb7AyAuS"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
