--- a/testing.html
+++ b/testing.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Get the latest sports news, social buzz, and live scores for NFL, NBA, MLB, and more — all in one place.">
     <meta name="robots" content="index, follow" />
-    <title>THPORTH | All the latest sports news</title>
+    <title>THPORTH | All the latest sports news, socials, and highlights</title>
    
 <link rel="icon" type="image/png" href="https://www.thporth.com/thporth_AllSportsNews_logo-black.png" />
   
