--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Centered Div</title>
+  <title>THPORTH | All sports news, socials, and highlights in one place</title>
   <style>
     html, body {
       margin: 0;
@@ -12,30 +12,26 @@
       background-color: #151515;
     }
 
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
     .centered-box {
+      position: absolute;
+      top: 200px;
+      left: 50%;
+      transform: translateX(-50%);
       padding: 20px;
       background-color: #151515;
       border: 0px solid #151515;
       color: white;
       font-family: sans-serif;
+      text-align: center;
     }
   </style>
 </head>
 <body>
   <div class="centered-box">
-    <div style="text-align: center;">
-      <img src="https://github.com/ajolly2/ajolly2.github.io/blob/master/thporth_AllSportsNews_logo-white.png?raw=true" style="width: 48px; height: 48px;" alt="Logo">
-<br>
+    <img src="https://github.com/ajolly2/ajolly2.github.io/blob/master/thporth_AllSportsNews_logo-white.png?raw=true" style="width: 72px; height: 72px;" alt="Logo">
+    <br>
     THPORTH is better full-size.<br>  
-Please visit thporth.com on desktop.
-  </div>
+    Please visit thporth.com on desktop.
   </div>
 </body>
 </html>
