--- a/testing.html
+++ b/testing.html
@@ -1032,7 +1032,9 @@
   </div>
 <!-- Container for second social content areas -->
   <div id="discussion-panel">
-    <div id="discussion-Home" class="content-section" style="display: none;"></div>
+    <div id="discussion-Home" class="content-section" style="display: none;">
+      <rssapp-feed id="62HuDvbXnoN4XDs4"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-NFL" class="content-section" style="display: none;">
       <rssapp-feed id="Ad2sypO2W5TebTah"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
