--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
     button:hover {
       background-color: #666;
     }
+
+    .footer-note {
+      margin-top: 12px;
+      font-size: 14px;
+      color: #bbb;
+    }
   </style>
 </head>
 <body>
@@ -70,6 +76,7 @@
         <br />
         <button type="submit">Notify Me</button>
       </form>
+      <p class="footer-note">No spam. No newsletters.</p>
     </div>
   </div>
 </body>
